Fix heading on mobile

--- a/public_html/profiles/os2web/themes/odsherredweb/css/mobile.css
+++ b/public_html/profiles/os2web/themes/odsherredweb/css/mobile.css
@@ -39,6 +39,15 @@
     font-size: 2.1em;
   }
 
+  .sidetitel {
+    font-weight: bold;
+    font-size: 22px;
+    padding-top: 20px;
+  }
+  .sidetitel div {
+    font-size: 22px;
+  }
+
   a {
     color: #407daa;
   }
